clusters/unifyops-home/apps/observability/prom-addons/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: observability
  annotations:
    # issue LE cert via DNS-01
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # publish DNS
    external-dns.alpha.kubernetes.io/hostname: grafana.unifyops.io
    # nginx: force HTTP -> HTTPS redirect
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx-private
  tls:
  - secretName: grafana-unifyops-io
    hosts:
      - grafana.unifyops.io
  rules:
  - host: grafana.unifyops.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kps-grafana
            port:
              number: 80
